--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script>
+    const root = document.getElementById("root");
+    const h3 = React.createElement(
+        "h3", 
+        {
+            id: "title",
+        onMouseEnter: () => console.log("mouse enter"),
+        },
+        "Hello I'm a span"
+    );
+    const btn = React.createElement(
+        "button", 
+        {
+        onClick: () => console.log("im clicked"),
+        style: {
+            backgroundColor:"tomato"
+        }
+        }, 
+        "Click me"
+    );
+    const container = React.createElement("div", null, [h3, btn]);
+    ReactDOM.render(container, root);   // 사용자에게 보여준다.
 </script>
 </html>
