--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script>
     const root = document.getElementById("root");
-    const h3 = React.createElement(
+    /*const h3 = React.createElement(
         "h3", 
         {
             id: "title",
-        onMouseEnter: () => console.log("mouse enter"),
+            onMouseEnter: () => console.log("mouse enter"),
         },
-        "Hello I'm a span"
+        "Hello I'm a title"
     );
+    */
     const btn = React.createElement(
         "button", 
         {
