--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
-        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+    function Title() {
+        return (
+            <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
             Hello I'm a title
-        </h3>
-    );
-    const Button = (
+            </h3>
+        );
+    };
+    const Button = () => (
         <button
         style={{
         backgroundColor: "tomato",
@@ -29,7 +31,12 @@
         Click me
         </button>
     );
-    const Container = <div>Title Button</div>;
-    ReactDOM.render(Container, root);   // 사용자에게 보여준다.
+    const Container = () => (
+        <div>
+            <Title /> 
+            <Button />
+        </div>
+    );
+    ReactDOM.render(<Container />, root);   // 사용자에게 보여준다.
 </script>
 </html>
